--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: Question
-    url: https://discord.gg/Xn8TCJWA
+    url: https://discord.gg/5m6GqM7vYN
     about: Please ask and answer questions here
