--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,14 +1,14 @@
 {
-  "version": "2.0.0",
-  "tasks": [
-    {
-      "label": "echotest",
-      "command": "${workspaceFolder}\\src\\compile\\run_with_py.bat",
-      "type": "shell",
-      "presentation": {
-        "revealProblems": "onProblem",
-        "close": true
-      }
-    }
-  ]
+    "version": "2.0.0",
+    "tasks": [
+        {
+            "label": "compiler",
+            "command": "${workspaceFolder}\\src\\compile\\run_without_py.bat",
+            "type": "shell",
+            "presentation": {
+                "revealProblems": "onProblem",
+                "close": true
+            }
+        }
+    ]
 }
