--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/mojang-gametest": "^0.1.4",
     "@types/mojang-minecraft": "^0.1.5",
     "jsonschema": "^1.4.0",
+    "rapydscript": "^0.5.62",
     "terser": "^5.12.1",
     "typescript": "^4.6.3"
   }
