--- a/src/behavior_pack/manifest.json
+++ b/src/behavior_pack/manifest.json
@@ -40,7 +40,6 @@
      * - chat_screen/v1.17.3.0
      * - chat_screen/v1.17.3004.0
      * - chat_screen/v1.18.1027.0
-     * - modal_form/v1.18.2028.0
      * - modal_form/v1.18.3021.0
      */
     {
@@ -49,28 +48,48 @@
 			"memory_tier": 1
     },
     {
-			"folder_name": "modal_form/v1.19.21.0",
+			"folder_name": "modal_form/v1.18.2028.0",
 			"name": "GameTest Framework v1.18.20 [UI]",
+			"memory_tier": 1
+    },
+    {
+			"folder_name": "modal_form/v1.19.21.0",
+			"name": "GameTest Framework v1.19.0 [UI]",
 			"memory_tier": 1
     }
   ],
   "dependencies": [
     {
-      // Minecraft native module - needed to use the "mojang-minecraft" module
+      "description": "mojang-minecraft",
       "uuid": "b26a4d4c-afdf-4690-88f8-931846312678",
       "version": [0, 1, 0]
     },
     {
-      // GameTest native module - needed to use the "mojang-gametest" module
+      "description": "mojang-gametest",
       "uuid": "6f4b6893-1bb6-42fd-b458-7fa3d0c89616",
       "version": [0, 1, 0]
     },
     {
-      // Minecraft UI native module - needed to use the "mojang-gametest-ui" module
+      "description": "mojang-minecraft-ui",
       "uuid": "2bd50a27-ab5f-4f40-a596-3641627c635e",
       "version": [0, 1, 0]
     },
     {
+      "description": "mojang-minecraft-server-admin",
+      "uuid": "53d7f2bf-bf9c-49c4-ad1f-7c803d947920",
+      "version": [ 0, 1, 0 ]
+    },
+    {
+      "description": "mojang-net",
+      "uuid": "777b1798-13a6-401c-9cba-0cf17e31a81b",
+      "version": [ 0, 1, 0 ]
+    },
+    {
+      "uuid": "a821aa07-ec9e-44fe-bc62-7792e10eb109",
+      "version": [ 0, 1, 0 ]
+    },
+    {
+      "description": "interpreter.resource_pack",
       "uuid": "5f58bc7f-b99f-4c3d-b569-97eeb2101736",
       "version": [19, 0, 298]
     }
